fixed header formatting issue on mobile

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -808,7 +808,7 @@ footer article h4{
 	.add .banner{height: 485px;}
 	.banner header{padding-bottom: 38px;}
 	.banner h1{
-		font-size: 39px;
+		font-size: 35px;
 		line-height: 42px;
 		margin-bottom: 16px;
 	}
